--- a/packages/browser-renderer/babel.config.json
+++ b/packages/browser-renderer/babel.config.json
@@ -6,7 +6,8 @@
       {
         "root": ["."],
         "alias": {
-          "src": "./src"
+          "src": "./src",
+          "config": "./config"
         }
       }
     ]
