--- a/packages/nvim/package.json
+++ b/packages/nvim/package.json
@@ -44,8 +44,7 @@
     "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^14.14.31",
     "@types/ws": "^7.4.0",
-    "jsdom": "^16.4.0",
-    "pixi.js": "^5.3.8"
+    "jsdom": "^16.4.0"
   },
   "dependencies": {
     "lodash": "^4.17.21",
