--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test": "jest",
     "typecheck": "tsc -p packages/browser-renderer; tsc -p packages/electron; tsc -p packages/server",
     "prepare": "husky install",
-    "generate-types": "babel-node -x \".ts\" scripts/generateTypes.ts"
+    "codegen": "babel-node -x \".ts\" scripts/codegen.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
