--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -34,16 +34,16 @@
     "start": "electron ."
   },
   "browserslist": [
-    "chrome 96",
-    "node 12"
+    "chrome 101",
+    "node 16"
   ],
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.31",
+    "@types/node": "^16.0.0",
     "chalk": "^4.1.0",
     "dotenv": "^8.2.0",
-    "electron": "^16.0.6",
+    "electron": "19.0.0",
     "electron-builder": "^22.9.1",
     "electron-notarize": "^1.0.0",
     "html-webpack-plugin": "^4.3.0",
