--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,50 +11,50 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Read .nvmrc
-      run: echo "##[set-output name=NVMRC;]$(cat .nvmrc)"
-      id: nvm
+      - name: Read .nvmrc
+        run: echo "##[set-output name=NVMRC;]$(cat .nvmrc)"
+        id: nvm
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: "${{ steps.nvm.outputs.NVMRC }}"
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '${{ steps.nvm.outputs.NVMRC }}'
 
-    - name: Install Nvim
-      run: brew install nvim
+      - name: Install Nvim
+        run: brew install nvim
 
-    - name: Get Yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Get Yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-    - name: Cache Yarn
-      uses: actions/cache@v1
-      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-      with:
-        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          yarn-${{ runner.os }}-
+      - name: Cache Yarn
+        uses: actions/cache@v4
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: yarn-${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            yarn-${{ runner.os }}-
 
-    - name: Install Dependencies
-      run: yarn
+      - name: Install Dependencies
+        run: yarn
 
-    - name: Build Required Packages
-      run: yarn bootstrap
+      - name: Build Required Packages
+        run: yarn bootstrap
 
-    - name: Run Tests
-      run: yarn test --reporters="default" --reporters="jest-github-actions-reporter" --coverage
+      - name: Run Tests
+        run: yarn test --reporters="default" --reporters="jest-github-actions-reporter" --coverage
 
-    - name: Upload snapshot diffs
-      uses: actions/upload-artifact@v3
-      with:
-        name: failed-image-snapshots
-        path: packages/**/__diff_output__/*
-        retention-days: 5
-      if: failure()
+      - name: Upload snapshot diffs
+        uses: actions/upload-artifact@v4
+        with:
+          name: failed-image-snapshots
+          path: packages/**/__diff_output__/*
+          retention-days: 5
+        if: failure()
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
