--- a/packages/browser-renderer/package.json
+++ b/packages/browser-renderer/package.json
@@ -41,16 +41,16 @@
   ],
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/jest-dev-server": "^4.2.0",
-    "@types/jest-image-snapshot": "^4.3.0",
+    "@types/jest-dev-server": "^5.0.3",
+    "@types/jest-image-snapshot": "^6.4.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^16.0.0",
-    "@types/puppeteer": "^5.4.3",
     "@types/ws": "^7.4.0",
-    "jest-dev-server": "^5.0.3",
-    "jest-image-snapshot": "^4.4.1",
-    "jsdom": "^16.5.0",
-    "puppeteer": "^9.0.0"
+    "jest-dev-server": "^11.0.0",
+    "jest-environment-jsdom": "^30.1.1",
+    "jest-image-snapshot": "^6.5.1",
+    "jsdom": "^26.1.0",
+    "puppeteer": "^24.17.1"
   },
   "dependencies": {
     "@vvim/nvim": "0.0.1",
